--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "path-key": "^3.1.1",
     "path-parse": "^1.0.7",
     "path-scurry": "^1.11.1",
+    "pg": "^8.14.1",
+    "pg-hstore": "^2.3.4",
     "picocolors": "^1.1.1",
     "picomatch": "^2.3.1",
     "pify": "^2.3.0",
@@ -81,6 +83,7 @@
     "resolve": "^1.22.10",
     "reusify": "^1.0.4",
     "run-parallel": "^1.2.0",
+    "sequelize": "^6.37.6",
     "shebang-command": "^2.0.0",
     "shebang-regex": "^3.0.0",
     "signal-exit": "^4.1.0",
