--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "anymatch": "^3.1.3",
     "arg": "^5.0.2",
     "balanced-match": "^1.0.2",
+    "bcryptjs": "^3.0.2",
     "binary-extensions": "^2.3.0",
     "brace-expansion": "^2.0.1",
     "braces": "^3.0.3",
     "camelcase-css": "^2.0.1",
     "chokidar": "^3.6.0",
+    "client-sessions": "^0.8.0",
     "color-convert": "^2.0.1",
     "color-name": "^1.1.4",
     "commander": "^4.1.1",
@@ -55,6 +57,8 @@
     "micromatch": "^4.0.8",
     "minimatch": "^9.0.5",
     "minipass": "^7.1.2",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2",
     "mz": "^2.7.0",
     "nanoid": "^3.3.8",
     "normalize-path": "^3.0.0",
